feat: test ci/cd using doppler to manage env initialize service from postgresql and redis to workflow
